gen/v25.3/rpk/rpk-shadow-list.adoc
= rpk shadow list
:description: rpk shadow list

List Redpanda Shadow Links.

This command lists all Shadow Links on the shadow cluster, showing their
names, unique identifiers, and current states. Use this command to get an
overview of all configured Shadow Links and their operational status.

== Usage

[,bash]
----
rpk shadow list [flags]

Examples:

List all Shadow Links:
  rpk shadow list
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for list.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===